fixes social media button in nav bar on all pages - wasn't linking to fonts in links on respective html. FIXED. Footer still not stuck to bottom.

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,4 +1,5 @@
 footer {
+  margin-bottom: 2px;
   border: solid #035F70;
   background-color: #057C92;
   position: absolute;
